--- a/my-app/src/pages/dasboard/users/user.scss
+++ b/my-app/src/pages/dasboard/users/user.scss
@@ -1,6 +1,6 @@
 @use "../../../styles/" as *;
 .users {
-  overflow: hidden;
+  // overflow: hidden;
   h3 {
     color: $secondary;
     margin-bottom: 40px;
