login unit test

--- a/src/pages/dasboard/users/user.scss
+++ b/src/pages/dasboard/users/user.scss
@@ -91,6 +91,7 @@
       p {
         display: flex;
         padding: 5px 0;
+        cursor: pointer;
 
         i {
           margin-right: 10px;
