--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -26,7 +26,7 @@
     width: 49%;
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    align-items: center;
     form {
       width: 100%;
       h1 {
@@ -81,13 +81,26 @@
   }
 }
 
-@include maxWidth(900px) {
+@include maxWidth(550px) {
   .login {
     .login__imgContainer {
       display: none;
     }
     .login__loginContainer {
       width: 100%;
+    }
+  }
+}
+@include minMaxWidth(501px, 1000px) {
+  .login {
+    .login__imgContainer {
+      display: none;
+    }
+    .login__loginContainer {
+      width: 100%;
+      form {
+        width: 80%;
+      }
     }
   }
 }
